--- a/swag/package.json
+++ b/swag/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.12.1",
+    "chart.js": "^4.5.0",
     "vue": "^3.5.18",
     "vuetify": "^3.9.7"
   },
