--- a/swag/Dockerfile
+++ b/swag/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:lts-alpine AS build
+FROM --platform=linux/amd64 node:lts-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:stable-alpine AS production
+FROM --platform=linux/amd64 nginx:stable-alpine AS production
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
