--- a/swag/package.json
+++ b/swag/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.12.1",
+    "chart.js": "^4.5.0",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vuetify": "^3.9.7"
   },
   "devDependencies": {
